--- a/FriendFinder/app/src/main/res/values/strings.xml
+++ b/FriendFinder/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">FriendFinder</string>
     <string name="domain">http://ec2-52-201-42-250.compute-1.amazonaws.com</string>
     <string name="title_activity_maps">Map</string>
-    <string name="username">Username</string>
+    <string name="email">Email</string>
     <string name="password">Password</string>
     <string name="full_name">Full Name</string>
     <string name="updateUserDetailsPage">/friendfinder/updateUserDetails.php</string>
